HDS-1551 Align items in Doc Layout to the top to prevent stretching

--- a/website/app/styles/doc-components/layout.scss
+++ b/website/app/styles/doc-components/layout.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-flow: wrap;
   gap: var(--doc-layout-spacing, 0);
+  align-items: start;
 }
 
 // Direction:
